criando metodo para excluir sala
