# service/src/main/resources/api.yml
@@ -28,10 +28,25 @@ paths:
                 $ref: '#/components/schemas/RoomDTO'
         404:
           description: 'Not Found'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ResponseError'
+
+    delete:
+      summary: 'Deletes a room by id'
+      operationId: deleteRoom
+      tags:
+        - room
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the room
+          schema:
+            type: integer
+            format: int64
+      responses:
+        204:
+          description: 'Deleted Succesfully'
+        404:
+          description: 'Not Found'
 
   /rooms:
     post:
